--- a/install/linux/appimage/AppImageBuilder.yml
+++ b/install/linux/appimage/AppImageBuilder.yml
@@ -11,7 +11,7 @@ AppDir:
     exec_args: $@
   apt:
     arch:
-    - amd64
+    - #APT_ARCH#
     allow_unauthenticated: true
     sources:
     - sourceline: deb http://archive.ubuntu.com/ubuntu/ bionic main restricted
@@ -26,9 +26,11 @@ AppDir:
     - sourceline: deb http://security.ubuntu.com/ubuntu/ bionic-security universe
     - sourceline: deb http://security.ubuntu.com/ubuntu/ bionic-security multiverse
     include:
-    - libc6:amd64
-    - libsdl2-dev:amd64
-    - make:amd64
+    - libc6:#APT_ARCH#
+    - libsdl2-dev:#APT_ARCH#
+    - clang:#APT_ARCH#
+    - lld:#APT_ARCH#
+    - ninja-build:#APT_ARCH#
   files:
     include: []
     exclude:
@@ -59,7 +61,7 @@ AppDir:
       command: ./AppRun
       use_host_x: true
 AppImage:
-  arch: x86_64
+  arch: #ARCH#
   comp: gzip
   update-information: guess
-  file_name: SerialLoops.AppImage
+  file_name: SerialLoops-#ARCH#.AppImage
