--- a/.github/workflows/official-build.yml
+++ b/.github/workflows/official-build.yml
@@ -176,9 +176,7 @@ jobs:
       image: fedora:39
     steps:
       - name: Install git on container
-        run: |
-          apt update
-          apt install -y git
+        run: dnf install -y git
       - name: Check out
         uses: actions/checkout@v4
         with:
