--- a/.github/workflows/official-build.yml
+++ b/.github/workflows/official-build.yml
@@ -37,7 +37,7 @@ jobs:
         with:
           dotnet-version: '8.0.x'
       - run: pip install requests
-      - run: python install/linux/flatpak/flatpak-dotnet-generator.py --dotnet 8 --freedesktop 23.08 nuget-sources.json src/SerialLoops/SerialLoops.csproj
+      - run: python install/linux/flatpak/flatpak-dotnet-generator.py --dotnet 8 --freedesktop 24.08 nuget-sources.json src/SerialLoops/SerialLoops.csproj submodules/NitroPacker.SymTableHelper/HaroohieClub.NitroPacker.SymTableHelper.csproj
       - name: Publish nuget-sources.json
         uses: actions/upload-artifact@v4
         with:
@@ -48,7 +48,7 @@ jobs:
     needs: linux-flatpak-setup
     runs-on: ubuntu-latest
     container:
-      image: bilelmoussaoui/flatpak-github-actions:freedesktop-23.08
+      image: bilelmoussaoui/flatpak-github-actions:freedesktop-24.08
       options: --privileged
     steps:
       - name: Check out
