--- a/.github/workflows/official-build.yml
+++ b/.github/workflows/official-build.yml
@@ -28,6 +28,8 @@ jobs:
     steps:
       - name: Check out
         uses: actions/checkout@v4
+        with:
+          submodules: true
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
@@ -37,7 +39,7 @@ jobs:
         with:
           dotnet-version: '8.0.x'
       - run: pip install requests
-      - run: python install/linux/flatpak/flatpak-dotnet-generator.py --dotnet 8 --freedesktop 24.08 nuget-sources.json src/SerialLoops/SerialLoops.csproj submodules/NitroPacker.SymTableHelper/HaroohieClub.NitroPacker.SymTableHelper.csproj
+      - run: python install/linux/flatpak/flatpak-dotnet-generator.py --dotnet 8 --freedesktop 24.08 nuget-sources.json src/SerialLoops/SerialLoops.csproj
       - name: Publish nuget-sources.json
         uses: actions/upload-artifact@v4
         with:
