--- a/install/linux/flatpak/club.haroohie.SerialLoops.yaml
+++ b/install/linux/flatpak/club.haroohie.SerialLoops.yaml
@@ -18,17 +18,15 @@ finish-args:
   - --share=ipc
   - --socket=pulseaudio
   - --filesystem=~/SerialLoops:create
-  - --filesystem=xdg-config:create
   - --env=DOTNET_ROOT=/app/lib/dotnet
-  - --env=SL_SYS_CONFIG_PATH=/app/config/sysconfig.json
-  - --env=SL_LLVM_PATH=/app/lib/llvm
+  - --env=SL_LLVM_PATH=/app/lib/llvm20
   - --env=SL_NINJA_PATH=/app/bin/ninja
   - --env=SL_FLATPAK_PROC=flatpak-spawn
   - --env=SL_FLATPAK_PROC_ARG=--host flatpak
   - --env=SL_FLATPAK_RUN_PROC=flatpak-spawn
   - --env=SL_FLATPAK_RUN_PROC_ARG=--host
   - --env=SL_USE_UPDATER=false
-  - --talk-name=org.freedesktop.Flatpak.net.kuribo64.melonDS
+  - --talk-name=org.freedesktop.Flatpak
 
 modules:
   - name: dotnet
