--- a/install/linux/flatpak/club.haroohie.SerialLoops.yaml
+++ b/install/linux/flatpak/club.haroohie.SerialLoops.yaml
@@ -9,6 +9,8 @@ build-options:
   prepend-path: "/usr/lib/sdk/dotnet8/bin"
   append-ld-library-path: "/usr/lib/sdk/dotnet8/lib"
   prepend-pkg-config-path: "/usr/lib/sdk/dotnet8/lib/pkgconfig"
+  append-path: "/usr/lib/sdk/llvm20/bin"
+  prepend-ld-library-path: "/usr/lib/sdk/llvm20/lib"
 
 command: SerialLoops
 
@@ -33,6 +35,14 @@ modules:
     buildsystem: simple
     build-commands:
     - /usr/lib/sdk/dotnet8/bin/install.sh
+
+  - name: llvm
+    buildsystem: simple
+    build-commands:
+    - cp /usr/lib/sdk/llvm20/bin/clang /app/bin
+    - cp /usr/lib/sdk/llvm20/bin/ld.lld /app/bin
+    - cp /usr/lib/sdk/llvm20/bin/llvm-objcopy /app/bin
+    - cp /usr/lib/sdk/llvm20/bin/llvm-objdump /app/bin
 
   - name: SDL
     buildsystem: simple
