--- a/install/linux/flatpak/club.haroohie.SerialLoops.yaml
+++ b/install/linux/flatpak/club.haroohie.SerialLoops.yaml
@@ -39,10 +39,11 @@ modules:
   - name: llvm
     buildsystem: simple
     build-commands:
-    - cp /usr/lib/sdk/llvm20/bin/clang /app/bin
-    - cp /usr/lib/sdk/llvm20/bin/ld.lld /app/bin
-    - cp /usr/lib/sdk/llvm20/bin/llvm-objcopy /app/bin
-    - cp /usr/lib/sdk/llvm20/bin/llvm-objdump /app/bin
+    - mkdir -p /app/lib/llvm20/bin/
+    - cp /usr/lib/sdk/llvm20/bin/clang /app/lib/llvm20/bin
+    - cp /usr/lib/sdk/llvm20/bin/ld.lld /app/lib/llvm20/bin
+    - cp /usr/lib/sdk/llvm20/bin/llvm-objcopy /app/lib/llvm20/bin
+    - cp /usr/lib/sdk/llvm20/bin/llvm-objdump /app/lib/llvm20/bin
 
   - name: SDL
     buildsystem: simple
