--- a/install/linux/flatpak/club.haroohie.SerialLoops.yaml
+++ b/install/linux/flatpak/club.haroohie.SerialLoops.yaml
@@ -45,7 +45,7 @@ modules:
     - cp /usr/lib/sdk/llvm20/bin/ld.lld /app/lib/llvm20/bin
     - cp /usr/lib/sdk/llvm20/bin/llvm-objcopy /app/lib/llvm20/bin
     - cp /usr/lib/sdk/llvm20/bin/llvm-objdump /app/lib/llvm20/bin
-    - cp /usr/lib/sdk/llvm20/lib/* /app/lib/llvm20/lib/
+    - cp -r /usr/lib/sdk/llvm20/lib/* /app/lib/llvm20/lib/
 
   - name: SDL
     buildsystem: simple
